CountDirective uses Integer.valueOf rather than new Integer to encourage caching